commit nr 7